--- a/PrompimanFront/src/app/booking-detail/booking-detail.page.html
+++ b/PrompimanFront/src/app/booking-detail/booking-detail.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>dlgBookingDetail</ion-title>
+    <ion-title>bookingDetail</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -88,7 +88,25 @@
         </ion-col>
       </ion-row>
 
-      <app-room></app-room>
+      <ion-row>
+        <ion-col size="2">
+          <ion-item>
+            <ion-label>ห้อง</ion-label>
+          </ion-item>
+        </ion-col>
+        <ion-col size="9">
+          <ion-item>
+            <ion-label>
+              111
+            </ion-label>
+          </ion-item>
+        </ion-col>
+        <ion-col size="1">
+          <ion-item (click)="room()">
+          <ion-icon slot="end" name="search-outline"></ion-icon>
+          </ion-item>
+        </ion-col>
+      </ion-row>
 
       <ion-row>
         <ion-col size="2">
@@ -113,7 +131,6 @@
           </ion-item>
         </ion-col>
       </ion-row>
-
     </ion-list>
   </form>
 </ion-content>
