edit ui booking info

--- a/PrompimanFront/src/app/booking-information/booking-information.page.html
+++ b/PrompimanFront/src/app/booking-information/booking-information.page.html
@@ -53,8 +53,8 @@
         </ion-col>
       </ion-row> -->
 
-    <!-- <app-datetime text="เข้าวันที่" mode="date" ></app-datetime> -->
-    <!-- <app-datetime text="ออกวันที่" mode="date" ></app-datetime> -->
+    <app-datetime text="เข้าวันที่" mode="date" [fg]="fg" formName="xxx"></app-datetime>
+    <app-datetime text="ออกวันที่" mode="date" [fg]="fg" formName="xxx"></app-datetime>
 
     <ion-row>
       <ion-col size="2">
@@ -79,7 +79,7 @@
           </ion-col>
         </ion-row> -->
 
-    <!-- <app-datetime text="ออกวันที่" mode="date" ></app-datetime> -->
+    <ion-label>ห้อง</ion-label>
 
     <ion-row>
       <ion-col size="2">
