--- a/PrompimanFront/src/app/register-detail/register-detail.page.html
+++ b/PrompimanFront/src/app/register-detail/register-detail.page.html
@@ -12,8 +12,7 @@
       <ion-col size="1">
       </ion-col>
       <ion-col size="2.5">
-        <img class="img-size"
-          src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQOWk4oFbAc18206aLh3GSnbFDN2SUnXPzhu7FIJzqio-J67gtd&usqp=CAU">
+        <ion-img class="img-size" [src]=urlPhoto class="img-responsive" alt="Image"></ion-img>
       </ion-col>
       <ion-col size="2.5">
         <ion-item>
@@ -88,8 +87,7 @@
       <ion-col size="1">
       </ion-col>
       <ion-col size="2.5">
-        <img class="img-size"
-          src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQOWk4oFbAc18206aLh3GSnbFDN2SUnXPzhu7FIJzqio-J67gtd&usqp=CAU">
+          <ion-img class="img-size" [src]=urlPhoto class="img-responsive" alt="Image"></ion-img>
       </ion-col>
       <ion-col size="2.5">
         <ion-item>
