edit ui and add routeForward

--- a/PrompimanFront/src/app/booking-information/booking-information.page.html
+++ b/PrompimanFront/src/app/booking-information/booking-information.page.html
@@ -133,7 +133,9 @@
       <ion-col size="5.5">
       </ion-col>
       <ion-col size="1">
-        <ion-button size="default" expand="block" type="">ถัดไป</ion-button>
+        <ion-button size="default" expand="block" type=""
+        [routerLink]="['/bill/']" routerDirection="forward">
+        ถัดไป</ion-button>
       </ion-col>
       <ion-col size="5.5">
       </ion-col>
