--- a/PrompimanFront/src/app/bill/bill.page.html
+++ b/PrompimanFront/src/app/bill/bill.page.html
@@ -95,19 +95,9 @@
       </ion-col>
     </ion-row>
 
-
-    <ion-row>
-      <ion-col size="8">
-      </ion-col>
-      <ion-col size="1">
-      </ion-col>
-      <ion-col size="1.5">
-        <ion-button size="default" expand="block" type="">ยืนยัน</ion-button>
-      </ion-col>
-      <ion-col size="1">
-      </ion-col>
-    </ion-row>
+    <ion-item>
+      <ion-button size="default" slot="end" expand="block" type="submit">ยืนยัน</ion-button>
+    </ion-item>
 
   </ion-list>
-
 </ion-content>
