--- a/PrompimanFront/src/app/booking/booking.page.html
+++ b/PrompimanFront/src/app/booking/booking.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>booking</ion-title>
+    <ion-title>Reservation</ion-title>
   </ion-toolbar>
 </ion-header>
 
