--- a/PrompimanFront/src/app/booking-detail/booking-detail.page.html
+++ b/PrompimanFront/src/app/booking-detail/booking-detail.page.html
@@ -97,13 +97,12 @@
         <ion-col size="9">
           <ion-item>
             <ion-label>
-              111
             </ion-label>
           </ion-item>
         </ion-col>
         <ion-col size="1">
           <ion-item (click)="room()">
-          <ion-icon slot="end" name="search-outline"></ion-icon>
+            <ion-icon slot="end" name="search-outline"></ion-icon>
           </ion-item>
         </ion-col>
       </ion-row>
@@ -131,6 +130,30 @@
           </ion-item>
         </ion-col>
       </ion-row>
+
+      <ion-row>
+        <ion-col size="2">
+          <ion-item>
+            <ion-label>เพิ่มเงินสำรองจ่าย</ion-label>
+            <ion-checkbox slot="start" value="false"></ion-checkbox>
+          </ion-item>
+        </ion-col>
+        <ion-col size="1.5">
+          <ion-item class="ion-text-center">
+            <ion-input type="text" placeholder="กรุณากรอกข้อมูล"></ion-input>
+          </ion-item>
+        </ion-col>
+        <ion-col size="1">
+          <ion-item>
+            บาท
+          </ion-item>
+        </ion-col>
+      </ion-row>
+
+      <ion-item>
+        <ion-button size="default" slot="end" expand="block" color="danger">ยกเลิก</ion-button>
+        <ion-button size="default" slot="end" expand="block" type="submit">บันทึก</ion-button>
+      </ion-item>
     </ion-list>
   </form>
 </ion-content>
