--- a/PrompimanFront/src/app/booking-detail/booking-detail.page.html
+++ b/PrompimanFront/src/app/booking-detail/booking-detail.page.html
@@ -1,11 +1,13 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>bookingDetail</ion-title>
+    <ion-title  *ngIf="isCancel2 == 'edit'">แก้ไขข้อมูลการจอง</ion-title>
+    <ion-title  *ngIf="isCancel2 == 'cancel'">ยืนยันการจอง</ion-title>
+
   </ion-toolbar>
 </ion-header>
 
 <ion-content class="ion-padding">
-  <ion-item lines="none">
+  <ion-item lines="none" *ngIf="isCancel2 == 'cancel'">
     <ion-button size="default" (click)="register()" slot="end" expand="block" type="submit">
       ยกเลิกการจอง
     </ion-button>
@@ -40,7 +42,7 @@
       <ion-row>
         <ion-col size="2">
           <ion-item>
-            <ion-label>เบอร์โทร</ion-label>
+            <ion-label>เบอร์โทรศัพท์</ion-label>
           </ion-item>
         </ion-col>
         <ion-col size="10">
@@ -62,7 +64,7 @@
       </ion-row>
 
       <app-datetime [fg]="fg" formName="date1" text="วันที่เข้า" mode="date"></app-datetime>
-      <app-datetime [fg]="fg" formName="date2" text="วันที่ออก" mode="date"></app-datetime>
+      <app-datetime [fg]="fg" formName="date2" text="ออกวันที่" mode="date"></app-datetime>
 
       <ion-row>
         <ion-col size="2">
@@ -131,9 +133,9 @@
         </ion-col>
       </ion-row>
 
-      <ion-row>
+      <ion-row *ngIf="isCancel2 == 'edit'">
         <ion-col size="2">
-          <ion-item>
+          <ion-item  *ngIf="isCancel2 == 'edit'">
             <ion-label>เพิ่มเงินสำรองจ่าย</ion-label>
             <ion-checkbox slot="start" value="false"></ion-checkbox>
           </ion-item>
@@ -151,8 +153,8 @@
       </ion-row>
 
       <ion-item>
-        <ion-button size="default" slot="end" expand="block" color="danger">ยกเลิก</ion-button>
-        <ion-button size="default" slot="end" expand="block" type="submit">บันทึก</ion-button>
+        <ion-button size="default" slot="end" expand="block" [routerLink]="['/booking/']" color="danger">ยกเลิก</ion-button>
+        <ion-button  *ngIf="isCancel2 == 'edit'" size="default" slot="end" expand="block" type="submit">บันทึก</ion-button>
       </ion-item>
     </ion-list>
   </form>
