--- a/PrompimanFront/src/app/booking/booking.page.html
+++ b/PrompimanFront/src/app/booking/booking.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>booking</ion-title>
+    <ion-title>จองห้อง</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -36,16 +36,16 @@
         <ion-col size="1.5">
           <h4>จองเมื่อ</h4>
         </ion-col>
-        <ion-col size="2" class="ion-text-left">
+        <ion-col size="2">
           <h4>ชื่อ</h4>
         </ion-col>
-        <ion-col size="2" class="ion-text-left">
+        <ion-col size="1.5">
           <h4>เบอร์โทรศัพท์</h4>
         </ion-col>
-        <ion-col size="2" class="ion-text-left">
+        <ion-col size="2">
           <h4>จำนวนห้อง</h4>
         </ion-col>
-        <ion-col size="1.5">
+        <ion-col size="2">
         </ion-col>
       </ion-row>
     </ion-card-header>
@@ -53,30 +53,36 @@
 
   <ion-card>
     <ion-card-content>
-      <ion-item (click)="editMember()" >
-        <ion-col size="1.5">
-          02/02/2020
-        </ion-col>
-        <ion-col size="1.5">
-          04/02/2020
-        </ion-col>
-        <ion-col size="1.5">
-          02/01/2020
-        </ion-col>
-        <ion-col size="2" class="ion-text-left">
-          พอลล่า
-        </ion-col>
-        <ion-col size="2" class="ion-text-left">
-          021236548999
-        </ion-col>
-        <ion-col size="1" class="ion-text-left">
-          200
-        </ion-col>
-        <ion-col size="1.5">
-          <ion-button size="default" expand="block" type="submit">ยืนยันการจอง</ion-button>
+      <ion-item lines="none">
+        <ion-col size="10" [routerLink]="['/booking-detail/', 'cancel']">
+          <ion-item lines="none">
+            <ion-col size="2">
+              02/02/2020
+            </ion-col>
+            <ion-col size="1.5">
+              04/02/2020
+            </ion-col>
+
+            <ion-col size="2" class="ion-text-center">
+              02/01/2020
+            </ion-col>
+            <ion-col size="2.5" class="ion-text-center">
+              ดงจัง ดีพังจุง
+            </ion-col> 
+            <ion-col size="2" class="ion-text-left">
+              021236548999
+            </ion-col>
+            <ion-col size="2" class="ion-text-center" >
+              200
+            </ion-col>
+          </ion-item>
         </ion-col>
         <ion-col size="1">
-          <ion-button (click)="editMember()" size="default" expand="block" color="medium" >แก้ไข</ion-button>
+          <ion-button (click)="confirmMember()" size="default" expand="block">ยืนยัน</ion-button>
+        </ion-col>
+        <ion-col size="1">
+          <ion-button [routerLink]="['/booking-detail/', 'edit']" size="default" expand="block" color="medium">แก้ไข
+          </ion-button>
         </ion-col>
       </ion-item>
     </ion-card-content>
