--- a/PrompimanFront/src/app/booking-information/booking-information.page.html
+++ b/PrompimanFront/src/app/booking-information/booking-information.page.html
@@ -5,70 +5,72 @@
 </ion-header>
 
 <ion-content class="ion-padding">
-  <!-- <form [formGroup]="fg" (ngSubmit)="handleSubmit()"> -->
-  <ion-list lines="none">
-    <ion-row>
-      <ion-col size="2">
-        <ion-item>
-          <ion-label>ชื่อ</ion-label>
-        </ion-item>
-      </ion-col>
-      <ion-col size="10">
-        <ion-item>
-          <ion-input type="text" placeholder="กรุณากรอกข้อมูล"></ion-input>
-        </ion-item>
-      </ion-col>
-    </ion-row>
-    <!-- <ion-row>
-      <ion-col size="2"></ion-col>
-      <ion-col size="10">
-        <ion-item *ngIf="isValid('input1')">
-          <span class="invalid-msg">
-            กรุณากรอกข้อมูล
-          </span>
-        </ion-item>
-      </ion-col>
-    </ion-row> -->
-
-    <ion-row>
-      <ion-col size="2">
-        <ion-item>
-          <ion-label>เบอร์โทรศัพท์</ion-label>
-        </ion-item>
-      </ion-col>
-      <ion-col size="10">
-        <ion-item>
-          <ion-input type="text" placeholder="กรุณากรอกข้อมูล"></ion-input>
-        </ion-item>
-      </ion-col>
-    </ion-row>
-    <!-- <ion-row>
+  <form [formGroup]="fg" (ngSubmit)="handleSubmit()">
+    <ion-list lines="none">
+      <ion-row>
+        <ion-col size="2">
+          <ion-item>
+            <ion-label>ชื่อ</ion-label>
+          </ion-item>
+        </ion-col>
+        <ion-col size="10">
+          <ion-item>
+            <ion-input type="text" placeholder="กรุณากรอกข้อมูล" [class.invalid]="isValid('name')"
+              formControlName="name"></ion-input>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+      <ion-row>
         <ion-col size="2"></ion-col>
         <ion-col size="10">
-          <ion-item *ngIf="isValid('input1')">
+          <ion-item *ngIf="isValid('name')">
             <span class="invalid-msg">
               กรุณากรอกข้อมูล
             </span>
           </ion-item>
         </ion-col>
-      </ion-row> -->
+      </ion-row>
 
-    <app-datetime text="เข้าวันที่" mode="date" [fg]="fg" formName="xxx"></app-datetime>
-    <app-datetime text="ออกวันที่" mode="date" [fg]="fg" formName="xxx"></app-datetime>
+      <ion-row>
+        <ion-col size="2">
+          <ion-item>
+            <ion-label>เบอร์โทรศัพท์</ion-label>
+          </ion-item>
+        </ion-col>
+        <ion-col size="10">
+          <ion-item>
+            <ion-input type="text" placeholder="กรุณากรอกข้อมูล" [class.invalid]="isValid('telephone')"
+              formControlName="telephone"></ion-input>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col size="2"></ion-col>
+        <ion-col size="10">
+          <ion-item *ngIf="isValid('telephone')">
+            <span class="invalid-msg">
+              กรุณากรอกข้อมูล
+            </span>
+          </ion-item>
+        </ion-col>
+      </ion-row>
 
-    <ion-row>
-      <ion-col size="2">
-        <ion-item>
-          <ion-label>จำนวนห้อง</ion-label>
-        </ion-item>
-      </ion-col>
-      <ion-col size="10">
-        <ion-item>
-          <ion-input type="text" placeholder="กรุณากรอกข้อมูล"></ion-input>
-        </ion-item>
-      </ion-col>
-    </ion-row>
-    <!-- <ion-row>
+      <app-datetime text="เข้าวันที่" mode="date" [fg]="fg" formName="checkInDate"></app-datetime>
+      <app-datetime text="ออกวันที่" mode="date" [fg]="fg" formName="checkOutDate"></app-datetime>
+
+      <ion-row>
+        <ion-col size="2">
+          <ion-item>
+            <ion-label>จำนวนห้อง</ion-label>
+          </ion-item>
+        </ion-col>
+        <ion-col size="10">
+          <ion-item>
+            <ion-input type="text" placeholder="กรุณากรอกข้อมูล"></ion-input>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+      <!-- <ion-row>
           <ion-col size="2"></ion-col>
           <ion-col size="10">
             <ion-item *ngIf="isValid('input1')">
@@ -79,68 +81,61 @@
           </ion-col>
         </ion-row> -->
 
-        <ion-row>
-          <ion-col size="2">
-            <ion-item>
-              <ion-label>ห้อง</ion-label>
-            </ion-item>
-          </ion-col>
-          <ion-col size="9">
-            <ion-item>
-              <ion-label>
-                111
-              </ion-label>
-            </ion-item>
-          </ion-col>
-          <ion-col size="1">
-            <ion-item (click)="room()">
+      <ion-row>
+        <ion-col size="2">
+          <ion-item>
+            <ion-label>ห้อง</ion-label>
+          </ion-item>
+        </ion-col>
+        <ion-col size="9">
+          <ion-item>
+            <ion-label>
+              111
+            </ion-label>
+          </ion-item>
+        </ion-col>
+        <ion-col size="1">
+          <ion-item (click)="room()">
             <ion-icon slot="end" name="search-outline"></ion-icon>
-            </ion-item>
-          </ion-col>
-        </ion-row>
+          </ion-item>
+        </ion-col>
+      </ion-row>
 
-    <ion-row>
-      <ion-col size="2">
-        <ion-item>
-          <ion-label>จ่ายเงินล่วงหน้า</ion-label>
-        </ion-item>
-      </ion-col>
-      <ion-col size="10">
-        <ion-item>
-          <ion-input type="text" placeholder="กรุณากรอกข้อมูล"></ion-input>
-        </ion-item>
-      </ion-col>
-    </ion-row>
-    <!-- <ion-row>
-            <ion-col size="2"></ion-col>
-            <ion-col size="10">
-              <ion-item *ngIf="isValid('input1')">
-                <span class="invalid-msg">
-                  กรุณากรอกข้อมูล
-                </span>
-              </ion-item>
-            </ion-col>
-          </ion-row> -->
+      <ion-row>
+        <ion-col size="2">
+          <ion-item>
+            <ion-label>จ่ายเงินล่วงหน้า</ion-label>
+          </ion-item>
+        </ion-col>
+        <ion-col size="10">
+          <ion-item>
+            <ion-input type="text" placeholder="กรุณากรอกข้อมูล" [class.invalid]="isValid('reserve')"
+              formControlName="reserve"></ion-input>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col size="2"></ion-col>
+        <ion-col size="10">
+          <ion-item *ngIf="isValid('reserve')">
+            <span class="invalid-msg">
+              กรุณากรอกข้อมูล
+            </span>
+          </ion-item>
+        </ion-col>
+      </ion-row>
 
+      <ion-row class="ion-padding">
+        <ion-col size="5.5">
+        </ion-col>
+        <ion-col size="1">
+          <ion-button size="default" expand="block" type="submit">
+            ถัดไป</ion-button>
+        </ion-col>
+        <ion-col size="5.5">
+        </ion-col>
+      </ion-row>
 
-    <!-- <ion-item text-center>
-      <ion-label>
-        <ion-button size="default"  type="">ถัดไป</ion-button>
-      </ion-label>
-    </ion-item> -->
-
-    <ion-row class="ion-padding">
-      <ion-col size="5.5">
-      </ion-col>
-      <ion-col size="1">
-        <ion-button size="default" expand="block" type=""
-        [routerLink]="['/bill/']" routerDirection="forward">
-        ถัดไป</ion-button>
-      </ion-col>
-      <ion-col size="5.5">
-      </ion-col>
-    </ion-row>
-
-  </ion-list>
-  <!-- </form> -->
+    </ion-list>
+  </form>
 </ion-content>
