--- a/PrompimanFront/src/app/booking-information/booking-information.page.html
+++ b/PrompimanFront/src/app/booking-information/booking-information.page.html
@@ -104,7 +104,7 @@
       <ion-row>
         <ion-col size="2">
           <ion-item>
-            <ion-label>จ่ายเงินล่วงหน้า</ion-label>
+            <ion-label>เงินสำรองจ่าย</ion-label>
           </ion-item>
         </ion-col>
         <ion-col size="10">
