add icon select ,binding room ,imprement medthod,add color custom

--- a/PrompimanFront/src/app/dlg-select-rooms-detail/dlg-select-rooms-detail.page.html
+++ b/PrompimanFront/src/app/dlg-select-rooms-detail/dlg-select-rooms-detail.page.html
@@ -14,11 +14,11 @@
         </ion-button>
         <ion-button expand="full" color="danger" class="ion-text-center">
         </ion-button>
-        <ion-button expand="full" style=" --background: brown;" class="ion-text-center">
+        <ion-button expand="full" color="brown" class="ion-text-center">
         </ion-button>
         <ion-button expand="full" color="warning" class="ion-text-center">
         </ion-button>
-        <ion-button expand="full" style=" --background: blue;" class="ion-text-center">
+        <ion-button expand="full" color="blue" class="ion-text-center">
         </ion-button>
         <ion-button expand="full" color="primary" class="ion-text-center" text lines="none">
           102
@@ -53,16 +53,16 @@
     <ion-row>
       <ion-col>
         <ion-button expand="full" fill="clear" class="ion-text-center">
-          <ion-icon slot="icon-only" name="information-circle-outline"></ion-icon>
+          <ion-icon slot="icon-only" src="../../assets/icon/standardmdpi.svg"></ion-icon>
         </ion-button>
         <ion-button expand="full" fill="clear" class="ion-text-center">
-          <ion-icon slot="icon-only" name="information-circle-outline"></ion-icon>
+          <ion-icon slot="icon-only" src="../../assets/icon/superiormdpi.svg"></ion-icon>
         </ion-button>
         <ion-button expand="full" fill="clear" class="ion-text-center">
-          <ion-icon slot="icon-only" name="information-circle-outline"></ion-icon>
+          <ion-icon slot="icon-only" src="../../assets/icon/deluxemdpi.svg"></ion-icon>
         </ion-button>
         <ion-button expand="full" fill="clear" class="ion-text-center">
-          <ion-icon slot="icon-only" name="information-circle-outline"></ion-icon>
+          <ion-icon slot="icon-only" src="../../assets/icon/grand_deiuxemdpi.svg"></ion-icon>
         </ion-button>
       </ion-col>
       <ion-col>
@@ -88,10 +88,10 @@
     <ion-row>
       <ion-col>
         <ion-button expand="full" fill="clear" class="ion-text-center">
-          <ion-icon slot="icon-only" name="information-circle-outline"></ion-icon>
+          <ion-icon slot="icon-only" src="../../assets/icon/bedmdpi.svg"></ion-icon>
         </ion-button>
         <ion-button expand="full" fill="clear" class="ion-text-center">
-          <ion-icon slot="icon-only" name="information-circle-outline"></ion-icon>
+          <ion-icon slot="icon-only" src="../../assets/icon/double_bedmdpi.svg"></ion-icon>
         </ion-button>
       </ion-col>
       <ion-col>
