--- a/PrompimanFront/src/app/booking-information/booking-information.page.html
+++ b/PrompimanFront/src/app/booking-information/booking-information.page.html
@@ -70,16 +70,6 @@
           </ion-item>
         </ion-col>
       </ion-row>
-      <!-- <ion-row>
-          <ion-col size="2"></ion-col>
-          <ion-col size="10">
-            <ion-item *ngIf="isValid('input1')">
-              <span class="invalid-msg">
-                กรุณากรอกข้อมูล
-              </span>
-            </ion-item>
-          </ion-col>
-        </ion-row> -->
 
       <ion-row>
         <ion-col size="2">
@@ -88,10 +78,10 @@
           </ion-item>
         </ion-col>
         <ion-col size="9">
-          <ion-item>
-            <ion-label>
-              111
-            </ion-label>
+          <ion-item *ngFor="let item of test" style="float:left">
+            <ion-button color="light">
+              {{item}}
+            </ion-button>
           </ion-item>
         </ion-col>
         <ion-col size="1">
@@ -100,6 +90,17 @@
           </ion-item>
         </ion-col>
       </ion-row>
+      <!-- <ion-row>
+        <ion-col size="2"></ion-col>
+        <ion-col size="9"></ion-col>
+        <ion-col size="1">
+          <ion-item *ngIf="isValid('rooms')">
+            <span class="invalid-msg">
+              กรุณากรอกข้อมูล
+            </span>
+          </ion-item>
+        </ion-col>
+      </ion-row> -->
 
       <ion-row>
         <ion-col size="2">
