edit moq variable

--- a/PrompimanFront/src/app/booking-information/booking-information.page.html
+++ b/PrompimanFront/src/app/booking-information/booking-information.page.html
@@ -80,7 +80,7 @@
         <ion-col size="9">
           <ion-item *ngFor="let item of test" style="float:left">
             <ion-button color="light">
-              {{item}}
+              {{item.roomNo}}
             </ion-button>
           </ion-item>
         </ion-col>
