--- a/PrompimanFront/src/app/checkin/checkin.page.html
+++ b/PrompimanFront/src/app/checkin/checkin.page.html
@@ -5,5 +5,10 @@
 </ion-header>
 
 <ion-content>
-
+  <ion-item lines="none">
+    <ion-button size="default" (click)="roomSetting()" slot="end" expand="block" type="submit">
+      <ion-icon name="settings"></ion-icon>
+      Setting
+    </ion-button>
+  </ion-item>
 </ion-content>
