--- a/PrompimanFront/src/app/booking/booking.page.html
+++ b/PrompimanFront/src/app/booking/booking.page.html
@@ -66,13 +66,13 @@
             <ion-col size="2" class="ion-text-center">
               {{item.creationDateTime | date:"dd/MM/yyyy"}}
             </ion-col>
-            <ion-col size="2.5" class="ion-text-center">
+            <ion-col size="2.5" class="ion-text-left">
               {{item.name}}
             </ion-col>
             <ion-col size="2" class="ion-text-left">
               {{item.telephone}}
             </ion-col>
-            <ion-col size="2" class="ion-text-center">
+            <ion-col size="2" class="ion-text-left">
               {{item.rooms.length}}
             </ion-col>
           </ion-item>
