--- a/PrompimanFront/src/app/booking-detail/booking-detail.page.html
+++ b/PrompimanFront/src/app/booking-detail/booking-detail.page.html
@@ -96,10 +96,10 @@
           </ion-item>
         </ion-col>
         <ion-col size="9">
-          <ion-item>
-            <ion-label>
-              {{xxx}}
-            </ion-label>
+          <ion-item *ngFor="let item of roomsnumber" style="float:left">
+            <ion-button color="light">
+              {{item.roomNo}}
+            </ion-button>
           </ion-item>
         </ion-col>
       </ion-row>
@@ -187,12 +187,11 @@
         </ion-col>
         <ion-col size="10">
           <ion-item>
-            <ion-input type="text" formControlName="rooms" placeholder="กรุณากรอกข้อมูล"
-              [class.invalid]="isValid('rooms')"></ion-input>
+            <ion-input type="text" value="{{roomslength}}" placeholder="กรุณากรอกข้อมูล"></ion-input>
           </ion-item>
         </ion-col>
       </ion-row>
-      <ion-row>
+      <!-- <ion-row>
         <ion-col size="2"></ion-col>
         <ion-col size="10">
           <ion-item *ngIf="isValid('rooms')">
@@ -201,7 +200,7 @@
             </span>
           </ion-item>
         </ion-col>
-      </ion-row>
+      </ion-row> -->
 
       <ion-row>
         <ion-col size="2">
@@ -210,10 +209,10 @@
           </ion-item>
         </ion-col>
         <ion-col size="9">
-          <ion-item>
-            <ion-label>
-              555
-            </ion-label>
+          <ion-item *ngFor="let item of this.fg.get('rooms').value" style="float:left">
+            <ion-button color="light">
+              {{item.roomNo}}
+            </ion-button>
           </ion-item>
         </ion-col>
         <ion-col size="1">
@@ -256,7 +255,7 @@
         </ion-col>
         <ion-col size="1.5">
           <ion-item class="ion-text-center">
-            <ion-input type="text" placeholder="กรุณากรอกข้อมูล" ></ion-input>
+            <ion-input type="text" placeholder="กรุณากรอกข้อมูล"></ion-input>
           </ion-item>
         </ion-col>
         <ion-col size="1">
