--- a/PrompimanFront/src/app/register/register.page.html
+++ b/PrompimanFront/src/app/register/register.page.html
@@ -55,7 +55,7 @@
         <ion-col size="3">
           {{item._id}}
         </ion-col>
-        <ion-col size="3" *ngIf="item.th_Firstname != null" class="ion-text-left">
+        <ion-col size="3" *ngIf="item.th_Firstname != null || item.th_Lastname != null" class="ion-text-left">
           {{item.th_Firstname}} {{item.th_Lastname}}
         </ion-col>
         <ion-col size="3" *ngIf="item.th_Firstname == null" class="ion-text-left">
