--- a/PrompimanFront/src/app/booking-information/booking-information.page.html
+++ b/PrompimanFront/src/app/booking-information/booking-information.page.html
@@ -78,7 +78,7 @@
           </ion-item>
         </ion-col>
         <ion-col size="9">
-          <ion-item *ngFor="let item of this.fg.get('rooms').value" style="float:left">
+          <ion-item *ngFor="let item of roomsSelect" style="float:left">
             <ion-button color="light">
               {{item.roomNo}}
             </ion-button>
