--- a/PrompimanFront/src/app/booking-detail/booking-detail.page.html
+++ b/PrompimanFront/src/app/booking-detail/booking-detail.page.html
@@ -191,16 +191,6 @@
           </ion-item>
         </ion-col>
       </ion-row>
-      <!-- <ion-row>
-        <ion-col size="2"></ion-col>
-        <ion-col size="10">
-          <ion-item *ngIf="isValid('rooms')">
-            <span class="invalid-msg">
-              กรุณากรอกข้อมูล
-            </span>
-          </ion-item>
-        </ion-col>
-      </ion-row> -->
 
       <ion-row>
         <ion-col size="2">
@@ -250,15 +240,15 @@
         <ion-col size="2">
           <ion-item>
             <ion-label>เพิ่มเงินสำรองจ่าย</ion-label>
-            <ion-checkbox slot="start" value="false"></ion-checkbox>
+            <ion-checkbox slot="start" (ionChange)="isReserve()"></ion-checkbox>
           </ion-item>
         </ion-col>
-        <ion-col size="1.5">
+        <ion-col size="1.5" *ngIf="addreserve">
           <ion-item class="ion-text-center">
             <ion-input type="text" placeholder="กรุณากรอกข้อมูล"></ion-input>
           </ion-item>
         </ion-col>
-        <ion-col size="1">
+        <ion-col size="1" *ngIf="addreserve">
           <ion-item>
             บาท
           </ion-item>
